--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -72,9 +72,10 @@
 
             {% block sw_media_catalog_modal_replace %}
                 <sw-media-modal-replace
+                    v-if="mediaItemToReplace"
                     :itemToReplace="mediaItemToReplace"
                     @sw-media-modal-replace-close="closeReplaceModal"
-                    @sw-media-modal-replace-replace-started="handleReplacementStarted">
+                    @sw-media-modal-replace-confirmed="handleItemReplaced">
                 </sw-media-modal-replace>
             {% endblock %}
         </template>
