--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -58,16 +58,19 @@
             {% endblock %}
 
             {% block sw_media_index_modal_delete %}
-                <sw-media-modal-delete :itemsToDelete ="selectionToDelete"
+                <sw-media-modal-delete
+                   :itemsToDelete ="selectionToDelete"
                    @sw-media-modal-delete-close="closeDeleteModal"
                    @sw-media-modal-delete-delete="deleteSelection">
                 </sw-media-modal-delete>
             {% endblock %}
 
             {% block sw_media_catalog_modal_replace %}
-                <sw-media-modal-replace :itemToReplace="mediaItemToReplace"
+                <sw-media-modal-replace
+                    v-if="mediaItemToReplace"
+                    :itemToReplace="mediaItemToReplace"
                     @sw-media-modal-replace-close="closeReplaceModal"
-                    @sw-media-modal-replace-replace-started="handleReplacementStarted">
+                    @sw-media-modal-replace-confirmed="handleItemReplaced">
                 </sw-media-modal-replace>
             {% endblock %}
         </template>
