NTR - Add possibility to use HTML tags in notification messages

--- a/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.html.twig
+++ b/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.html.twig
@@ -9,7 +9,8 @@
                       :notificationIndex="notification.uuid"
                       :closable="true"
                       @swAlertClose="onClose">
-                {{ notification.message }}
+
+                <div slot="default" v-html="notification.message"></div>
             </sw-alert>
         </transition-group>
     </div>
