--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.html.twig
@@ -34,7 +34,7 @@
 
                 {% block sw_customer_base_metadata_orders %}
                     <dt>{{ $tc('sw-customer.baseInfo.labelOrders') }}</dt>
-                    <dd>{{ customer.orders.length }}</dd>
+                    <dd>{{ customer.orderCustomers.length }}</dd>
                 {% endblock %}
 
                 {% block sw_customer_base_metadata_turnover %}
