--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -3,7 +3,7 @@
 
         {% block sw_order_list_search_bar_type %}
             <template slot="search-bar-type">
-                {{ $tc('sw-order.general.mainMenuItemGeneral') }}:
+                {{ $tc('sw-order.general.mainMenuItemGeneral') }}
             </template>
         {% endblock %}
 
