--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -3,7 +3,7 @@
 
         {% block sw_media_list_search_bar_type %}
             <template slot="search-bar-type">
-                {{ $tc('sw-media.general.mainMenuItemGeneral') }}:
+                {{ $tc('sw-media.general.mainMenuItemGeneral') }}
             </template>
         {% endblock %}
 
