--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -3,7 +3,7 @@
 
         {% block sw_order_list_search_bar_type %}
             <template slot="search-bar-type">
-                {{ $tc('sw-product.general.mainMenuItemGeneral') }}:
+                {{ $tc('sw-product.general.mainMenuItemGeneral') }}
             </template>
         {% endblock %}
 
@@ -203,7 +203,8 @@
                                 {% block sw_product_list_grid_sidebar %}
                                     <sw-sidebar slot="sidebar">
                                         {% block sw_product_list_grid_sidebar_filter %}
-                                            <sw-sidebar-item icon="default-action-filter" title="Filter">
+                                            <sw-sidebar-item icon="default-action-filter"
+                                                             :title="$tc('sw-product.list.titleFilter')">
                                                 <sw-field type="switch"
                                                           v-for="(filter, index) in filters"
                                                           :label="filter.label"
@@ -219,7 +220,10 @@
                                         {% endblock %}
 
                                         {% block sw_product_list_grid_sidebar_refresh %}
-                                            <sw-sidebar-item icon="default-arrow-360-left" @click="onRefresh"></sw-sidebar-item>
+                                            <sw-sidebar-item icon="default-arrow-360-left"
+                                                             :title="$tc('sw-product.list.titleRefresh')"
+                                                             @click="onRefresh">
+                                            </sw-sidebar-item>
                                         {% endblock %}
                                     </sw-sidebar>
                                 {% endblock %}
