--- a/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
@@ -3,7 +3,7 @@
 
         {% block sw_settings_tax_list_search_bar_type %}
             <template slot="search-bar-type">
-                {{ $tc('sw-settings-tax.list.textHeadline') }}:
+                {{ $tc('sw-settings-tax.list.textHeadline') }}
             </template>
         {% endblock %}
 
