NEXT-788 - Add ability to filter results in multi select and refactor category selection for product detail page

--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
@@ -40,7 +40,7 @@
                                 {% block sw_multi_select_selection_dismiss %}
                                     <button class="sw-multi-select__selection-dismiss"
                                             :title="$tc('global.sw-multi-select.buttonDismiss')"
-                                            @click.prevent.stop="dismissSelection(selection.id)">
+                                            @click.prevent.stop="onDismissSelection(selection.id)">
                                         {% block sw_multi_select_selection_dismiss_icon %}
                                             <sw-icon name="small-default-x-line-medium"
                                                      :class="{ 'is--default': (selection.id === defaultItemId) }">
