NTR - Styling fixes

--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.less
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.less
@@ -72,6 +72,11 @@
         overflow: hidden;
         text-overflow: ellipsis;
         margin-bottom: 0;
+
+        .sw-icon {
+            position: relative;
+            top: -2px;
+        }
     }
 
     .smart-bar__actions {
