--- a/Resources/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.html.twig
@@ -1,5 +1,5 @@
 {% block sw_settings %}
-    <sw-page class="sw-settings">
+    <sw-page class="sw-settings-index">
 
         {% block sw_settings_header %}
             <template slot="smart-bar-header">
