--- a/Resources/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.less
+++ b/Resources/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.less
@@ -1,4 +1,22 @@
-.sw-settings__card .sw-card__content {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
+.sw-settings-index {
+    .sw-settings__card .sw-card__content {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
+    }
+
+    .sw-settings-item {
+        .sw-settings-item__icon {
+            height: 80px;
+            position: relative;
+
+            svg {
+                margin: auto;
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                top: 0;
+            }
+        }
+    }
 }
