NEXT-794: Improve video preview -> add playable and autoplay props

--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
@@ -15,7 +15,7 @@
 
             <template v-else-if="checkForFileTypeVideo">
                 {% block sw_media_preview_file_type_video %}
-                    <video controls class="sw-media-preview-item">
+                    <video :controls="playable" :autoplay="autoplay" class="sw-media-preview-item">
                         <source :src="item.url" :type="item.mimeType">
                         {{ $tc('global.sw-media-preview.fallbackVideoTagSupport') }}
                     </video>
@@ -24,7 +24,7 @@
 
             <template v-else-if="checkForFileTypeAudio">
                 {% block sw_media_preview_file_type_audio %}
-                    <audio controls>
+                    <audio :controls="playable" :autoplay="autoplay">
                         <source :src="item.url" :type="item.mimeType">
                         {{ $tc('global.sw-media-preview.fallbackAudioTagSupport') }}
                     </audio>
