--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -163,8 +163,7 @@
 
                             {% block sw_sales_channel_detail_options_delete_modal_footer %}
                                 <template slot="modal-footer">
-                                    <sw-button size="small"
-                                               @click="onCloseDeleteModal">
+                                    <sw-button size="small" @click="onCloseDeleteModal">
                                         {{ $tc('sw-sales-channel.detail.buttonCloseDeleteModal') }}
                                     </sw-button>
                                     <sw-button size="small"
