--- a/Resources/administration/src/module/sw-settings-shipping/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/extension/sw-settings-index/sw-settings-index.html.twig
@@ -3,8 +3,8 @@
 
     {% block sw_settings_shipping_item %}
         <sw-settings-item :label="$tc('sw-settings-shipping.general.mainMenuItemGeneral')"
-                          disabled
-                          :to="{ name: 'sw.settings.shipping.index' }">
+                          :to="{ name: 'sw.settings.shipping.index' }"
+                          disabled>
             <template slot="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80" height="80" viewBox="0 0 80 80">
                     <defs>
