Move cover relation from ProductMediaDefinition to ProductDefinition

--- a/Resources/administration/src/module/sw-product/component/sw-product-file-upload/sw-product-file-upload.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-file-upload/sw-product-file-upload.html.twig
@@ -19,7 +19,7 @@
                               @sw-image-cover="markMediaAsCover( mediaItem )"
                               :key="mediaItem.mediaId"
                               :ref="'image' + mediaItem.mediaId"
-                              :isCover="mediaItem.isCover"
+                              :isCover="isCover(mediaItem)"
                               :altText="mediaItem.media.name"
                               :url="getPreviewForMedia(mediaItem.media)"
                               :downloadable="true"></sw-image>
