--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
@@ -17,7 +17,8 @@
                                 @sw-media-grid-item-clicked="mediaItemClicked"
                                 @sw-media-grid-item-play="mediaItemPlayed"
                                 @sw-media-grid-item-selection-remove="removeFromSelection"
-                                v-on="$listeners">
+                                v-on="$listeners"
+                                :showContextMenuButton="showContextMenuButton">
                             </component>
                         </div>
                     {% endblock %}
