--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
@@ -36,7 +36,7 @@
                 {% endblock %}
 
                 {% block sw_media_grid_item_context_menu %}
-                    <div class="sw-media-grid-item__context-button">
+                    <div v-if="showContextMenuButton" class="sw-media-grid-item__context-button">
                         <sw-context-button ref="swContextButton">
                             {% block sw_media_grid_item_context_items%}{% endblock %}
                         </sw-context-button>
