--- a/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.less
+++ b/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.less
@@ -41,8 +41,12 @@
     .sw-sales-channel-modal__detail-cover {
         width: 165px;
         height: 165px;
-        background: lighten(@sw-sales-channel-modal-color-text, 25%);
+        background-color: @color-light-gray;
         border-radius: 3px;
+
+        img {
+            max-width: 100%;
+        }
     }
 
     .sw-sales-channel-modal__detail-name {
