--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -54,8 +54,7 @@
                 {% block sw_order_line_items_grid_columns_actions %}
                     <sw-grid-column flex="minmax(70px, 70px)"
                                     align="center"
-                                    label=""
-                                    iconLabel="small-search">
+                                    label="">
                         {% block sw_order_line_items_grid_columns_actions_button %}
                             <sw-context-button>
 
