--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -48,6 +48,7 @@
                                  :selectable="false"
                                  @edit="onEdit"
                                  @sort-column="onSortColumn"
+                                 @inline-edit-cancel="onInlineEditCancel"
                                  @inline-edit-finish="onInlineEditSave">
 
                             {% block sw_product_list_grid_slots %}
