--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -47,6 +47,7 @@
                                  :selectable="false"
                                  :isFullpage="true"
                                  @sort-column="onSortColumn"
+                                 @inline-edit-cancel="onInlineEditCancel"
                                  @inline-edit-finish="onInlineEditSave">
 
                             {% block sw_customer_list_grid_slots %}
