--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
@@ -45,6 +45,7 @@
                                          class="sw-settings-payment-list-grid"
                                          :selectable="false"
                                          :items="items"
+                                         @inline-edit-cancel="onInlineEditCancel"
                                          @inline-edit-finish="onInlineEditSave"
                                          table>
                                     <template slot="columns" slot-scope="{ item }">
