NEXT-548 - Add metadata ui

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -73,12 +73,12 @@
         grid-template-columns: 50% 50%;
     }
 
-    .sw-media-quickinfo__metadata-description {
+    .sw-media-quickinfo__two-columns > dt {
         color: @sw-media-quickinfo-metadata-color;
         font-weight: bold;
     }
 
-    .sw-media-quickinfo__metadata-value {
+    .sw-media-quickinfo__two-columns > dd {
         .truncate();
     }
 }
