--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -95,16 +95,38 @@
 
                 <template slot="content">
                     {% block sw_media_quickinfo_metadata_content %}
-                        <div class="sw-media-quickinfo__collapse-content sw-media-quickinfo__two-columns">
-                            <template v-for="(value, key) in getMetadata">
-                                {% block sw_media_quickinfo_metadata_attribute %}
-                                    <div class="sw-media-quickinfo__metadata-description">{{ $tc('sw-media.sidebar.metadata.' + key) }}:</div>
-                                {% endblock %}
-                                {% block sw_media_quickinfo_metadata_value %}
-                                    <div class="sw-media-quickinfo__metadata-value">{{ value }}</div>
-                                {% endblock %}
-                            </template>
-                        </div>
+                    <dl class="sw-media-quickinfo__collapse-content">
+                        {% block sw_media_quickinfo_metadata_content_base %}
+                        <sw-media-quickinfo-metadata-item label-name="name" :value="this.item.name" />
+                        <sw-media-quickinfo-metadata-item label-name="mimeType" :value="this.item.mimeType" />
+                        <sw-media-quickinfo-metadata-item label-name="fileSize" :value="getFileSize" />
+                        <sw-media-quickinfo-metadata-item label-name="createdAt" :value="getCreatedAt" />
+                        <sw-media-quickinfo-metadata-item label-name="url" :value="this.item.url" />
+                        {% endblock %}
+
+                        <template v-if="this.item.metaData.typeName === 'image'">
+                            {% block sw_media_quickinfo_metadata_content_image %}
+                            <sw-media-quickinfo-metadata-item label-name="width" :value="this.item.metaData.type.width" suffix="px" />
+                            <sw-media-quickinfo-metadata-item label-name="height" :value="this.item.metaData.type.height" suffix="px"/>
+                            {% endblock %}
+                        </template>
+
+                        <template v-if="this.item.metaData.typeName === 'video'">
+                            {% block sw_media_quickinfo_metadata_content_video %}
+                            <sw-media-quickinfo-metadata-item label-name="width" :value="this.item.metaData.type.width" suffix="px" />
+                            <sw-media-quickinfo-metadata-item label-name="height" :value="this.item.metaData.type.height" suffix="px"/>
+                            <sw-media-quickinfo-metadata-item label-name="frameRate" :value="this.item.metaData.type.frameRate" suffix="Hz"/>
+                            {% endblock %}
+                        </template>
+
+                        <template v-if="this.item.metaData.typeName === 'document'">
+                            {% block sw_media_quickinfo_metadata_content_document %}
+                            <sw-media-quickinfo-metadata-item label-name="pages" :value="this.item.metaData.type.pages"/>
+                            <sw-media-quickinfo-metadata-item label-name="title" :value="this.item.metaData.type.title"/>
+                            <sw-media-quickinfo-metadata-item label-name="creator" :value="this.item.metaData.type.creator"/>
+                            {% endblock %}
+                        </template>
+                    </dl>
                     {% endblock %}
                 </template>
 
